@@ -2,6 +2,11 @@
  *
  */
 
+2009-04-29 17:17 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  + src/wxbase/controls/wxhSpinCtrl.prg
+  + src/wxbase/controls/wx_SpinCtrl.cpp
+    + added forgotten sources in last commit
+
 2009-04-29 17:13 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * makefile.gcc
   * makefile.vc
